@@ -2,5 +2,7 @@
 
 CMD="g++ --std=c++0x -o driver -Wall -I../../tmp driver.cc -L../../tmp/lib \
                                                     -lreadline -lbobcat -s"
+
+CMD="g++ --std=c++0x -o driver -Wall driver.cc -lbobcat -s"
 echo $CMD
 $CMD
